新增首次启动引导：首次进入程序弹窗提示是否导入推荐仓库；确认后自动导入「官方推荐 + 社区精选」全部仓库并后台扫描，帮助用户快速充实市场内容。

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -524,6 +524,21 @@
     "failed": "Update failed, please try again later",
     "checkFailed": "Failed to check for updates"
   },
+  "onboarding": {
+    "importFeatured": {
+      "title": "Import recommended repositories?",
+      "description": "For a better first run experience, import all repositories from Official + Community picks and scan them to populate the Marketplace. You can also add them later in Repositories.",
+      "cancel": "Not now",
+      "confirm": "Import & scan",
+      "importing": "Importing...",
+      "toast": {
+        "added": "Added {{added}}/{{total}} recommended repositories ({{skipped}} already existed)",
+        "nothingToAdd": "Recommended repositories already exist",
+        "scanning": "Scanning repositories in background. Browse them in Marketplace soon.",
+        "failed": "Import failed: {{error}}"
+      }
+    }
+  },
   "settings": {
     "title": "APPLICATION_SETTINGS",
     "language": {
