--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -31,14 +31,14 @@
     "tabs": {
       "skills": "技能 ({{count}})",
       "plugins": "插件 ({{count}})",
-      "marketplaces": "Marketplace ({{count}})"
+      "marketplaces": "市场 ({{count}})"
     },
     "plugins": {
       "empty": "暂无已安装插件"
     },
     "marketplaces": {
-      "search": "搜索 Marketplace...",
-      "empty": "暂无已安装 Marketplace",
+      "search": "搜索市场...",
+      "empty": "暂无已安装市场",
       "source": "来源仓库：",
       "pluginsCount": "插件数量（已安装/总数）：",
       "dependentPlugins": "将同时卸载以下插件：",
@@ -184,7 +184,7 @@
         "title": "可升级为 Claude Code Plugin",
         "description": "检测到该技能也提供 Claude Code Plugin 版本。建议以插件方式安装以获得完整功能（命令/工具等）。",
         "plugin": "插件：",
-        "marketplaceRepo": "Marketplace 仓库：",
+        "marketplaceRepo": "市场仓库：",
         "commands": "命令：",
         "copy": "复制命令",
         "copied": "已复制到剪贴板",
@@ -234,7 +234,7 @@
     "badge": "插件",
     "scanning": "扫描中",
     "noDescription": "暂无描述",
-    "marketplace": "Marketplace",
+    "marketplace": "市场",
     "repo": "仓库:",
     "version": "版本",
     "installedVersion": "已安装版本",
@@ -260,9 +260,9 @@
         "available": "可更新 {{version}}",
         "update": "更新",
         "updating": "更新中...",
-        "updated": "Marketplace 已更新",
-        "updateFailed": "Marketplace 更新失败",
-        "updateFailedWithError": "Marketplace 更新失败：{{error}}"
+        "updated": "市场已更新",
+        "updateFailed": "市场更新失败",
+        "updateFailedWithError": "市场更新失败：{{error}}"
       }
     },
     "installDialog": {
@@ -294,18 +294,18 @@
     "logTitle": "安装日志：{{name}}",
     "noLog": "暂无日志",
     "close": "关闭",
-    "removeMarketplace": "移除 Marketplace",
+    "removeMarketplace": "移除市场",
     "removingMarketplace": "移除中",
-    "confirmRemoveTitle": "确认移除 Marketplace",
-    "confirmRemoveMessage": "确定要移除 Marketplace \"{{name}}\" 吗？已安装的插件将被卸载（共 {{count}} 个）。",
+    "confirmRemoveTitle": "确认移除市场",
+    "confirmRemoveMessage": "确定要移除市场 \"{{name}}\" 吗？已安装的插件将被卸载（共 {{count}} 个）。",
     "toast": {
       "installed": "插件安装成功",
       "installFailed": "插件安装失败",
       "scanFailed": "扫描失败",
       "uninstalled": "插件卸载成功",
       "uninstallFailed": "插件卸载失败",
-      "marketplaceRemoved": "Marketplace 移除成功（已删除 {{count}} 个插件）",
-      "marketplaceRemoveFailed": "Marketplace 移除失败"
+      "marketplaceRemoved": "市场移除成功（已删除 {{count}} 个插件）",
+      "marketplaceRemoveFailed": "市场移除失败"
     }
   },
   "repositories": {
@@ -474,7 +474,7 @@
       "localSkillsFailed": "扫描本地技能失败：{{error}}",
       "completed": "安全扫描完成，已扫描 {{count}} 个技能",
       "failed": "安全扫描失败：{{error}}",
-      "allCompleted": "扫描完成：发现 {{localCount}} 个技能，插件 {{pluginCount}} 个，Marketplace {{marketplaceCount}} 个，安全扫描 {{scannedCount}} 个技能，插件安全扫描 {{scannedPluginsCount}} 个"
+      "allCompleted": "扫描完成：发现 {{localCount}} 个技能，插件 {{pluginCount}} 个，市场 {{marketplaceCount}} 个，安全扫描 {{scannedCount}} 个技能，插件安全扫描 {{scannedPluginsCount}} 个"
     },
     "riskLevels": {
       "critical": "严重",
@@ -523,6 +523,21 @@
     "restartRequired": "更新已完成，请重启应用生效",
     "failed": "更新失败，请稍后重试",
     "checkFailed": "检查更新失败"
+  },
+  "onboarding": {
+    "importFeatured": {
+      "title": "导入推荐仓库？",
+      "description": "首次使用建议导入「官方推荐」与「社区精选」的全部仓库，并自动扫描以填充市场内容。你也可以稍后在「仓库」页面手动添加。",
+      "cancel": "暂不导入",
+      "confirm": "导入并开始扫描",
+      "importing": "导入中...",
+      "toast": {
+        "added": "已添加 {{added}}/{{total}} 个推荐仓库（已存在 {{skipped}} 个）",
+        "nothingToAdd": "推荐仓库已存在，无需重复添加",
+        "scanning": "正在后台扫描仓库，稍后可在市场中浏览",
+        "failed": "导入失败：{{error}}"
+      }
+    }
   },
   "settings": {
     "title": "应用设置",
