- 安全扫描评分优化：同一规则按文件去重并采用递减扣分，减少同类低风险重复扣分导致评分过低 - 扫描可见性增强：新增 partial_scan/跳过文件列表，详情弹窗提示扫描未完整并展示示例 - 风险展示排序与映射修正：概览问题列表与详情页按严重程度排序，修正 severity 映射 - 规则噪声降低：网络/动态执行类降权，反弹 shell 规则收窄，去重 eval 规则 - 插件/技能扫描一致性：跳过 README/README.*.md，二进制文件不计风险

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -443,6 +443,9 @@
     "detail": {
       "scanTime": "Scan Time",
       "securityScore": "Security Score",
+      "partialScan": "Partial scan",
+      "skippedFiles": "Skipped {{count}} files",
+      "skippedExamples": "Examples: {{files}}",
       "close": "Close",
       "recommendations": "Recommendations",
       "lineNumber": "Line",
