优化英文页面显示，精选插件仓库tags精简

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -469,7 +469,7 @@
     "statistics": {
       "installedSkills": "INSTALLED_SKILLS",
       "installedPlugins": "INSTALLED_PLUGINS",
-      "marketplaces": "CONFIGURED_MARKETPLACES",
+      "marketplaces": "CONFIG_MARKET",
       "repositories": "REPOSITORIES",
       "scannedSkills": "SCANNED_SKILLS"
     },
@@ -501,7 +501,7 @@
     },
     "riskFilters": {
       "Severe": "SEVERE_RISK",
-      "MidHigh": "MID_HIGH_RISK",
+      "MidHigh": "MID_RISK",
       "Safe": "SAFE"
     },
     "issues": {
