已安装页新增全部筛选

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -29,10 +29,12 @@
   },
   "installed": {
     "tabs": {
+      "all": "ALL ({{count}})",
       "skills": "SKILLS ({{count}})",
       "plugins": "PLUGINS ({{count}})",
       "marketplaces": "MARKETPLACES ({{count}})"
     },
+    "search": "SEARCH_INSTALLED_ITEMS...",
     "plugins": {
       "empty": "NO_INSTALLED_PLUGINS"
     },
@@ -45,6 +47,7 @@
       "andMore": "... and {{count}} more"
     },
     "empty": {
+      "all": "NO_INSTALLED_ITEMS",
       "noResults": "No items found containing \"{{query}}\"",
       "clearFilters": "CLEAR_FILTERS"
     }
