新增功能 扫描进度优化 文件级进度显示：扫描前自动统计待扫描文件总数，进度显示从「技能/插件数」升级为「文件数」，让用户更直观了解扫描进度 实时进度推送：后端新增 scan-progress 事件，实时推送当前扫描的文件路径 扫描状态细化：新增「准备扫描（统计文件中）」状态，区分扫描准备和执行阶段 后端新增 count_scan_files 命令：统计目录中可扫描的文件数量，用于前端进度条预估 scan_installed_skill / scan_installed_plugin 命令新增 scan_id 参数，支持关联进度事件 前端优化 扫描完成后保留文件级统计信息（已扫描 X/Y 文件） 进度条高度增加，视觉更清晰 扫描状态文案支持动态切换（准备中/扫描中） 国际化更新 中英文新增扫描状态相关文案： files / 文件 preparing / 准备扫描（统计文件中） 完成提示新增扫描数量显示 技术细节 新增 ScanProgressEvent 类型定义扫描进度事件结构 扫描器 scan_directory_with_options 方法新增可选的进度回调参数 前端使用 scan_id 关联进度事件与扫描任务

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -477,16 +477,18 @@
       "scannedSkills": "SCANNED_SKILLS"
     },
     "scanStatus": {
-      "lastScan": "LAST_SCAN",
-      "scanned": "SCANNED",
+      "lastScan": "Last scan",
+      "scanned": "Scanned",
       "of": "/",
-      "skills": "SKILLS",
-      "items": "ITEMS",
-      "scanAll": "SCAN_ALL",
-      "scanning": "SCANNING...",
-      "completed": "SCAN_COMPLETE: {{count}} ISSUES_FOUND",
-      "noIssues": "SCAN_COMPLETE: NO_ISSUES",
-      "never": "NEVER_SCANNED"
+      "skills": "skills",
+      "items": "items",
+      "files": "files",
+      "scanAll": "Scan all",
+      "preparing": "Preparing scan (counting files)",
+      "scanning": "Scanning",
+      "completed": "Scan complete — {{count}} issues found",
+      "noIssues": "Scan complete — no issues found (scanned {{scanned}}/{{total}} {{label}})",
+      "never": "Never scanned"
     },
     "scan": {
       "localSkillsFound": "FOUND {{count}} LOCAL_SKILLS",
