优化扫描卡片显示

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -486,6 +486,7 @@
       "scanAll": "Scan all",
       "preparing": "Preparing scan (counting files)",
       "scanning": "Scanning",
+      "scanningWithProgress": "Scanning {{scanned}}/{{total}} {{label}}...",
       "completed": "Scan complete — {{count}} issues found",
       "noIssues": "Scan complete — no issues found (scanned {{scanned}}/{{total}} {{label}})",
       "never": "Never scanned"
