一键扫描不再自动补扫新发现项；后台同步发现新技能/插件后，会把按钮改成“继续扫描”，点击只扫新增未扫描的项；当没有未扫描项时，按钮恢复“一键扫描”

--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -498,6 +498,7 @@
       "items": "个技能插件",
       "files": "个文件",
       "scanAll": "一键扫描",
+      "scanContinue": "继续扫描",
       "preparing": "准备扫描（统计文件中）",
       "scanning": "正在扫描",
       "scanningWithProgress": "正在扫描{{scanned}}/{{total}}{{label}}...",
