设置页面调整

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -580,7 +580,8 @@
     "title": "APPLICATION_SETTINGS",
     "language": {
       "title": "LANGUAGE",
-      "label": "INTERFACE_LANGUAGE"
+      "label": "INTERFACE_LANGUAGE",
+      "description": "Switch the UI language. Changes apply immediately."
     },
     "appInfo": {
       "title": "APPLICATION_INFO",
