--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -580,7 +580,8 @@
     "title": "应用设置",
     "language": {
       "title": "语言设置",
-      "label": "界面语言"
+      "label": "界面语言",
+      "description": "切换应用界面显示语言，立即生效。"
     },
     "appInfo": {
       "title": "应用信息",
@@ -591,7 +592,7 @@
     "reset": {
       "title": "重置",
       "label": "重置本地数据",
-      "description": "将清除应用配置、缓存与本地数据库（不会删除你已安装到磁盘的 skill 文件）。操作完成后会自动重启。",
+      "description": "将清除应用配置、缓存与本地数据库（不会删除已安装插件/技能）。",
       "button": "重置",
       "confirmTitle": "确定要重置所有本地数据吗？",
       "confirmDescription": "该操作会删除本地配置、缓存与数据库内容。应用将重启，并表现得像全新安装。",
@@ -605,7 +606,7 @@
       "title": "偏好设置",
       "scanPrompt": {
         "title": "安装后弹窗提示一键扫描",
-        "description": "插件安装完成后弹窗引导前往「概览」页进行一键安全扫描。",
+        "description": "插件扫描采取后置逻辑，安装完成后弹窗引导前往「概览」页手动执行扫描。",
         "enabled": "已开启",
         "disabled": "已关闭"
       },
