--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -77,7 +77,7 @@
     "all": "全部",
     "installed": "已安装",
     "available": "可用",
-    "loading": "加载技能数据库中",
+    "loading": "加载数据中",
     "install": "安装",
     "installToOther": "新增",
     "uninstall": "卸载",
