--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -343,7 +343,7 @@
     },
     "addRepo": "添加仓库",
     "cancel": "取消",
-    "newRepository": "新仓库",
+    "newRepository": "新仓库（不建议Plugin通过此方式安装，可以通过issue提交录入申请）",
     "repoName": "仓库名称：",
     "githubUrl": "GitHub 链接：",
     "urlHint": "输入完整的 GitHub 仓库链接",
